--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black_shade_1"
-    tools:context=".LoginActivity">
+    tools:context=".ui.LoginActivity">
 
     <!--edit text for user name-->
     <com.google.android.material.textfield.TextInputLayout
