SOme UI Issue fix

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,8 +5,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:background="@color/black_shade_1"
     tools:context=".ui.LoginActivity">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="36sp" />
 
     <!--edit text for user name-->
     <com.google.android.material.textfield.TextInputLayout
@@ -15,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="92dp"
         android:layout_marginEnd="20dp"
         android:hint="Enter User Name"
         android:padding="5dp"
@@ -25,7 +34,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/idEdtUserName"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:ems="10"
             android:importantForAutofill="no"
             android:inputType="textEmailAddress"
