--- a/app/src/main/res/layout/course_rv_item.xml
+++ b/app/src/main/res/layout/course_rv_item.xml
@@ -1,4 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="175dp">
+
+
+    <ImageView
+        android:id="@+id/container"
+        android:layout_width="0dp"
+        android:layout_height="135dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/container_bg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+
+        android:id="@+id/idIVCourse"
+        android:layout_width="100dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/book1" />
+
+    <TextView
+        android:textStyle="bold"
+        android:id="@+id/idTVCOurseName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:text="An American Marriage"
+        app:layout_constraintStart_toEndOf="@+id/idIVCourse"
+        app:layout_constraintTop_toTopOf="@+id/container" />
+
+    <TextView
+        android:id="@+id/idTVCousePrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:text="By Tayari Jones"
+        app:layout_constraintStart_toEndOf="@+id/idIVCourse"
+        app:layout_constraintTop_toBottomOf="@+id/idTVCOurseName" />
+
+    <RatingBar
+        style="?android:attr/ratingBarStyleSmall"
+        android:id="@+id/item_book_ratingbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toEndOf="@+id/idIVCourse"
+        app:layout_constraintTop_toBottomOf="@+id/idTVCousePrice" />
+
+    <TextView
+        android:id="@+id/item_book_score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="score"
+        app:layout_constraintBottom_toBottomOf="@+id/item_book_ratingbar"
+        app:layout_constraintStart_toEndOf="@+id/item_book_ratingbar"
+        app:layout_constraintTop_toTopOf="@+id/item_book_ratingbar" />
+
+    <TextView
+        android:id="@+id/item_book_pagesrev"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:text="225 pages | 23 review"
+        app:layout_constraintStart_toEndOf="@+id/idIVCourse"
+        app:layout_constraintTop_toBottomOf="@+id/item_book_ratingbar" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintEnd_toEndOf="@+id/container"
+        app:layout_constraintTop_toTopOf="@+id/container"
+        app:srcCompat="@drawable/ic_favorite_black_24dp"
+        app:tint="@color/fav_icon_tint" />
+</androidx.constraintlayout.widget.ConstraintLayout>
+<!--
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -13,14 +119,14 @@
         android:layout_height="wrap_content"
         android:background="@color/black_shade_1">
 
-        <!--image view for our course-->
+        &lt;!&ndash;image view for our course&ndash;&gt;
         <ImageView
             android:id="@+id/idIVCourse"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:scaleType="centerCrop" />
 
-        <!--text view for course name-->
+        &lt;!&ndash;text view for course name&ndash;&gt;
         <TextView
             android:id="@+id/idTVCOurseName"
             android:layout_width="match_parent"
@@ -35,7 +141,7 @@
             android:textSize="15sp"
             android:textStyle="bold" />
 
-        <!--text view for course price-->
+        &lt;!&ndash;text view for course price&ndash;&gt;
         <TextView
             android:id="@+id/idTVCousePrice"
             android:layout_width="wrap_content"
@@ -54,4 +160,4 @@
 
     </RelativeLayout>
 
-</androidx.cardview.widget.CardView>
+</androidx.cardview.widget.CardView>-->
