--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,8 @@
     <color name="dark_blue_shade">#0D2162</color>
     <color name="dark_blue_shade_2">#17388E</color>
     <color name="light_blue_shade">#12B2E6</color>
+
+    <color name="ligh_meduim_gray" >#f3f3f3</color>
+    <color name="fav_icon_tint">#CAC7C7</color>
+
 </resources>
