Login UI Improve

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
 
     <color name="black_shade_1">#0e2433</color>
     <color name="black_shade_2">#1C4966</color>
+    <color name="login_bg_color">#F8F3FF</color>
 
     <color name="black_shade_3">#22252D</color>
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#296D98</color>
