--- a/app/src/main/res/drawable/button_back.xml
+++ b/app/src/main/res/drawable/button_back.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <!--for specifying corner radius-->
-    <corners android:radius="20dp" />
-    <!-- for specifying solid color-->
-    <solid android:color="@color/black_shade_1" />
+    <!--  Gradient Bg for listrow -->
+    <gradient
+        android:startColor="#9C27B0"
+        android:centerColor="#A9A9FA"
+        android:endColor="#03A9F4" />
 
+    <corners android:radius="12dp"/>
 </shape>
