--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,114 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="@color/black_shade_1"
+    android:background="@color/white"
     tools:context=".ui.LoginActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="36sp" />
+        android:layout_height="150dp">
 
-    <!--edit text for user name-->
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/idTILUserName"
-        style="@style/LoginTextInputLayoutStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="92dp"
-        android:layout_marginEnd="20dp"
-        android:hint="Enter User Name"
-        android:padding="5dp"
-        android:textColorHint="@color/white"
-        app:hintTextColor="@color/white">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/idEdtUserName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:importantForAutofill="no"
-            android:inputType="textEmailAddress"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:textSize="14sp" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <!--edit text for password-->
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/idTILPassword"
-        style="@style/LoginTextInputLayoutStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/idTILUserName"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="20dp"
-        android:hint="Enter your Password"
-        android:padding="5dp"
-        android:textColorHint="@color/white"
-        app:hintTextColor="@color/white">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/idEdtPassword"
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:ems="10"
-            android:importantForAutofill="no"
-            android:inputType="textPassword"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:textSize="14sp" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:scaleType="fitXY"
+            android:src="@drawable/login_bg"/>
+    </LinearLayout>
 
-    <!--button for login-->
-    <Button
-        android:id="@+id/idBtnLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/idTILPassword"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="25dp"
-        android:background="@drawable/button_back"
-        android:text="Login"
-        android:textAllCaps="false"
-        />
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:gravity="center">
 
-    <!--text view for creating a new account-->
-    <TextView
-        android:id="@+id/idTVNewUser"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/idBtnLogin"
-        android:layout_marginTop="40dp"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="New User ? Register Here"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="18sp" />
+       <TextView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:text="Login"
+           android:textAlignment="center"
+           android:textColor="@color/black_shade_1"
+           android:textSize="36sp" />
 
-    <!--progress-bar for loading indicator-->
-    <ProgressBar
-        android:id="@+id/idPBLoading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/idTVNewUser"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:indeterminate="true"
-        android:indeterminateDrawable="@drawable/progress_back"
-        android:visibility="gone" />
+       <!--edit text for user name-->
+       <com.google.android.material.textfield.TextInputLayout
+           android:id="@+id/idTILUserName"
+           style="@style/LoginTextInputLayoutStyle"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginStart="20dp"
+           android:layout_marginTop="92dp"
+           android:layout_marginEnd="20dp"
+           android:hint="Enter User Name"
+           android:padding="5dp"
+           android:textColorHint="@color/black_shade_2"
+           app:hintTextColor="@color/black_shade_2">
 
-</RelativeLayout>
+           <com.google.android.material.textfield.TextInputEditText
+               android:id="@+id/idEdtUserName"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:ems="10"
+               android:importantForAutofill="no"
+               android:inputType="textEmailAddress"
+               android:textColor="@color/black_shade_2"
+               android:textColorHint="@color/black_shade_2"
+               android:textSize="14sp" />
+       </com.google.android.material.textfield.TextInputLayout>
+
+       <!--edit text for password-->
+       <com.google.android.material.textfield.TextInputLayout
+           android:id="@+id/idTILPassword"
+           style="@style/LoginTextInputLayoutStyle"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_below="@id/idTILUserName"
+           android:layout_marginStart="20dp"
+           android:layout_marginTop="16dp"
+           android:layout_marginEnd="20dp"
+           android:hint="Enter your Password"
+           android:padding="5dp"
+           android:textColorHint="@color/black_shade_2"
+           app:hintTextColor="@color/black_shade_2">
+
+           <com.google.android.material.textfield.TextInputEditText
+               android:id="@+id/idEdtPassword"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:ems="10"
+               android:importantForAutofill="no"
+               android:inputType="textPassword"
+               android:textColor="@color/black_shade_2"
+               android:textColorHint="@color/black_shade_2"
+               android:textSize="14sp" />
+       </com.google.android.material.textfield.TextInputLayout>
+
+       <!--button for login-->
+       <androidx.appcompat.widget.AppCompatButton
+           android:id="@+id/idBtnLogin"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_below="@id/idTILPassword"
+           android:layout_marginStart="25dp"
+           android:layout_marginTop="40dp"
+           android:layout_marginEnd="25dp"
+           android:background="@drawable/button_back"
+           android:text="Login"
+           android:textStyle="bold"
+           android:textSize="18sp"
+           android:textColor="@color/black" />
+
+       <!--text view for creating a new account-->
+       <TextView
+           android:id="@+id/idTVNewUser"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_below="@id/idBtnLogin"
+           android:layout_marginTop="40dp"
+           android:gravity="center"
+           android:padding="10dp"
+           android:text="New User ? Register Here"
+           android:textAlignment="center"
+           android:textAllCaps="false"
+           android:textColor="@color/white"
+           android:textSize="18sp" />
+
+       <!--progress-bar for loading indicator-->
+       <ProgressBar
+           android:id="@+id/idPBLoading"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_below="@id/idTVNewUser"
+           android:layout_centerHorizontal="true"
+           android:layout_marginTop="10dp"
+           android:indeterminate="true"
+           android:indeterminateDrawable="@drawable/progress_back"
+           android:visibility="gone" />
+   </RelativeLayout>
+
+</FrameLayout>
