--- a/app/src/main/res/layout/course_rv_item.xml
+++ b/app/src/main/res/layout/course_rv_item.xml
@@ -20,7 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:id="@+id/card"
         android:layout_width="100dp"
         android:layout_height="150dp"
@@ -30,23 +30,33 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="8dp">
+
+
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:cardElevation="0dp"
+        android:layout_marginBottom="-8dp"
         app:cardBackgroundColor="@color/ligh_meduim_gray"
-        android:background="@drawable/container_bg"
-        app:cardCornerRadius="8dp">
+        app:cardCornerRadius="12dp">
 
         <ImageView
             android:id="@+id/idIVCourse"
-            android:layout_width="100dp"
-            android:layout_height="150dp"
-            android:scaleType="centerCrop"
-            android:clipToOutline="true"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            android:paddingBottom="8dp"
             android:visibility="visible"
-            android:background="@drawable/container_bg"
             app:srcCompat="@drawable/book1" />
 
     </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 
     <TextView
         android:textStyle="bold"
